# rust_guess_the_word

./: Cargo.toml  README.md  hints.txt  words.txt
src/: main.rs
